[package]
name = "jonny_rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
youtube_dl = "0.7.0"
serde = "1.0.134"
serde_json = "1.0.75"
reqwest = "0.11.9"
tokio = { version = "1.0.0", features = ["full"] }